# perfs-timer

./: .gitignore  README.md  pyproject.toml  setup.py
perfs_timer/: __init__.py  timer.py
tests/: __init__.py  test_timer.py
