[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfs-timer"
version = "0.1.0"
description = "Simple performance timer to measure execution time of code blocks"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["performance", "timer", "profiling", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/czuger/perfs-timer"
Repository = "https://github.com/czuger/perfs-timer"
